<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_description</name>
  <version>1.0.0</version>
  <description>URDF and mesh assets for the Unitree Go2 robot.</description>

  <maintainer email="rkumar@dfki.de">DFKI Quadruped Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
