<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quad_model_adaptation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nicola.pedrocchi@cnr.it">Nicola Pedrocchi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>common</depend>
  <depend>eigen</depend>
  <depend>gait_controller</depend>
  <depend>quad_swing_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
